Lab3/Marcin_Lason/zadanie3/grammar/NPJ.g4
grammar NPJ;
program: statements;
statements: statement | statements statement;
statement: varDecl';' | assignment';' | print';' | heapAnalyze';' | collect';';
varDecl: varDeclT | varDeclSConst | varDeclSNull;
varDeclT: 'VarDeclT' STRING;
varDeclSConst: 'VarDeclS' STRING '"'STRING'"';
varDeclSNull: 'VarDeclS' STRING NULL;
assignment: lValue '=' rValue;
lValue: STRING | lValue'.'STRING;
rValue: lValue | NULL | INT | '"'STRING'"';
print: printStringConst | printStringMessage | printQuoted;
printStringConst: 'Print' STRING;
printStringMessage: 'Print' '"'STRING'"';
printQuoted: 'Print' QUOTED;
heapAnalyze: 'HeapAnalyze';
collect: 'Collect';
NULL: 'NULL';
INT: '0' | [1-9][0-9]*;
STRING: [a-zA-Z][a-zA-Z0-9]*;
QUOTED: '"'[a-zA-Z0-9]*[ ]+[a-zA-Z0-9 ]*'"';
WS: [ \t\r\n]+ -> skip;
